Fix cartItemPreview button issue on mobile

--- a/src/assets/styles/components/entities/cart/_cart-item-preview.scss
+++ b/src/assets/styles/components/entities/cart/_cart-item-preview.scss
@@ -62,6 +62,7 @@
   .cart-item-quantity-container {
     display: grid;
     grid-template-columns: 36px 1fr 36px;
+    max-width: clamp(200px, 100%, 360px);
     gap: 0.25rem;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -79,9 +80,6 @@
     }
 
     button {
-      display: flex;
-      justify-content: center;
-      align-items: center;
       background-color: transparent;
       border: none;
       padding: 0.5rem;
